# device-ingestion-service

./: .gitignore  README.md  docker-compose.postgres.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/: openapi-v1.json
docs/: architecture-deep-dive.md
docs/diagrams/: schema-er.mmd
scripts/: export_openapi.py  init_postgres.sql  run_postgres_integration_tests.sh  run_worker.py
src/device_ingestion_service/: __init__.py  main.py  settings.py
src/device_ingestion_service/adapters/inbound/http/: __init__.py  router.py  schemas.py
src/device_ingestion_service/adapters/inbound/mqtt/: __init__.py  protocols.py  worker.py
src/device_ingestion_service/adapters/outbound/: __init__.py  in_memory.py  postgres.py
src/device_ingestion_service/application/: uow.py  use_cases.py
src/device_ingestion_service/domain/: entities.py  errors.py  repositories.py
tests/: conftest.py  test_api_smoke.py  test_openapi_contract.py  test_poc_golden_regression.py  test_postgres_integration.py
tests/fixtures/: poc_ingestion_golden.json
